<resources>
    <string name="app_name">WeatherRetrofit</string>
    <string name="london">No city</string>
    <string name="tv_temp_actual">-°C</string>
    <string name="current_temperature">Current temperature</string>
    <string name="maximum_temperature">Maximum Temperature</string>
    <string name="minimum_temperature">Minimum temperature</string>
    <string name="error_api_call">An error happened</string>
    <string name="loading">Loading</string>
    <string name="loading_place">Getting place Weather Data</string>
    <string name="button_close">button close</string>
    <string name="no_internet">You don\'t have internet access</string>
    <string name="refresh_button">refresh button</string>
    <string name="feels_like">Feels like:</string>
    <string name="humidity">Humidity:</string>
    <string name="humidity_standard">70%</string>
    <string name="image_alert">Image alert</string>
    <string name="select_a_city">Select a city</string>
    <string name="search">search</string>
    <string name="change_city">change_city</string>
    <string name="not_found">City not found</string>
    <string name="standard_meters_seconds">1.5 m/s</string>
    <string name="this_is_a_splash">THIS IS A SPLASH</string>
    <string name="empty_field">The field is empty</string>
    <string name="search_icon">Search Icon</string>
    <string name="no_city">No cities found, make sure\nthe name is right.</string>
    <string name="standard_country_name">BR</string>
    <string name="country_name">Country Name</string>
</resources>