<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingHorizontal="20dp"
    android:id="@+id/main_view"
    android:background="@color/gray_background"
    >

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_black"
        android:text="@string/london"
        android:textColor="@color/yellow"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ln_main_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_city">

        <TextView
            android:id="@+id/tv_temp_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_black"
            android:text="@string/tv_temp_actual"
            android:textColor="@color/white"
            android:textSize="100sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv_label_feels_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_black"
                android:text="@string/feels_like"
                android:layout_marginEnd="4dp"
                android:textColor="@color/gray_light"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tv_feels_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_black"
                android:text="@string/tv_temp_actual"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv_label_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_black"
                android:text="@string/humidity"
                android:layout_marginEnd="4dp"
                android:textColor="@color/gray_light"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_black"
                android:text="@string/humidity_standard"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <ImageView
                android:id="@+id/img_alert"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_alert_start"
                android:contentDescription="@string/image_alert"
                />

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_refresh_24"
        app:tint="@color/white"
        android:backgroundTint="@color/gray_background_dark"
        android:paddingHorizontal="16sp"
        android:paddingVertical="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_city"
        android:contentDescription="@string/refresh_button" />

</androidx.constraintlayout.widget.ConstraintLayout>