<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:id="@+id/main_view"
    tools:context=".SearchCity">

    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:fontFamily="@font/nunito_black"
        android:hint="@string/select_a_city"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/nunito_black"
        android:text="@string/search"
        android:textColor="@color/gray_background"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_search" />

    <LinearLayout
        android:id="@+id/ln_error_show_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search"
        android:orientation="vertical"
        android:visibility="invisible"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_find_replace_24"
            android:layout_marginTop="20dp"
            app:tint="@color/white"
            android:visibility="visible"
            android:contentDescription="@string/search_icon"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_city"
            android:fontFamily="@font/nunito_black"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>